--- a/.github/workflows/azure-spring-cloud.yml
+++ b/.github/workflows/azure-spring-cloud.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout GitHub Action
         uses: actions/checkout@v3
 
-      - name: Set up J D K 17
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: 17
@@ -36,7 +36,7 @@ jobs:
         with:
           azure-subscription: ${{ env.AZURE_SUBSCRIPTION }}
           action: Deploy
-          service-name: springazure-demo
-          app-name: springazure-demo
+          service-name: springazuredemo
+          app-name: springazuredemo
           use-staging-deployment: false
           package: ${{ env.ASC_PACKAGE_PATH }}/**/*.jar
