--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.codingsaint</groupId>
-	<artifactId>springazure-demo</artifactId>
+	<artifactId>springazuredemo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>springazure-demo</name>
+	<name>springazuredemo</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
