--- a/.github/workflows/azure-spring-cloud.yml
+++ b/.github/workflows/azure-spring-cloud.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           azure-subscription: ${{ env.AZURE_SUBSCRIPTION }}
           action: Deploy
-          service-name: springazuresvc
+          service-name: springazuredemo
           app-name: springazuredemo
           use-staging-deployment: false
           package: ${{ env.ASC_PACKAGE_PATH }}/**/*.jar
